Kubernetes/Authentik/authentikService.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-service
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/instance: authentik
spec:
  # type: LoadBalancer # not needed as we are using ingress
  selector:
    app.kubernetes.io/name: authentik
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
