Kubernetes/Authentik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.authentik.jimsgarage.co.uk`)
      kind: Rule
      services:
        - name: authentik
          port: 9000
    - match: Host(`authentik.jimsgarage.co.uk`)
      kind: Rule
      services:
        - name: authentik
          port: 9443
      middlewares:
        - name: default-headers
  tls:
    secretName: jimsgarage-tls
